--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -18,7 +18,7 @@ I&rsquo;m a full-stack software engineer. I&rsquo;m originally
 from Guangdong, China. I owe much of my career to the Web
 and Deep learning.
 
-Graduated from Guangdong University of Finance and Economics with a major in Computer Science and Technology. During my undergraduate studies, I was deeply immersed in ACM competitions, occasionally
+Graduated from Guangdong University of Finance and Economics with a major in Computer Science. During my undergraduate studies, I was deeply immersed in ACM competitions, occasionally
 working on web development and small projects related to deep learning.
 
 After graduating, I applied for a master's program in computer science at Fudan University, but unfortunately, I did not pass the interview.
