--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -2,7 +2,7 @@ import Image from "next/image";
 
 # About
 
-<a href="https://twitter.com/rauchg" target="_blank">
+<a href="https://twitter.com/zhousongjie" target="_blank">
   <Image
     src="/images/avatar.jpeg"
     alt="avatar"
