--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: 'SONG',
   description: 'An overview of my career',
   openGraph: {
-    title: 'Vercel',
+    title: '关于我',
     description: 'An overview of my career',
     images: [{ url: '/about/opengraph-image' }]
   }
