--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -64,5 +64,5 @@ export const metadata = {
 
 “那我简单点，选复旦吧。”
 
-
+<iframe className="w-full" width={298} height={52} src="//music.163.com/outchain/player?type=2&id=1876121078&auto=1&height=32"></iframe>
 
