--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -65,6 +65,7 @@ export const metadata = {
 “那我简单点，选复旦吧。”
 
 <iframe
+  playsinline
   id="embedPlayer"
   className="w-full rounded-[10px]"
   allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
