--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -65,11 +65,6 @@ export const metadata = {
 “那我简单点，选复旦吧。”
 
 <iframe
-  playsinline
-  id="embedPlayer"
-  className="w-full rounded-[10px]"
-  allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
-  sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
-  height={52}
+  className="w-full rounded-[10px]" height={52}
   src="//music.163.com/outchain/player?type=2&id=1876121078&auto=0&height=32"
 />
