--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -40,7 +40,7 @@ export const metadata = {
 
 ## 乌托邦
 
-人的欲望如同高山滚石，想要走得更远更远，为了算法竞赛，我将大学课程抛之脑后。过分注重算法，以至于高数英语一度挂科，但我最终如愿进入竞赛队。
+人的欲望如同高山滚石，想要走得更远更远，我在算法竞赛路上渐行渐远，将大学课程抛之脑后。过分注重算法，以至于高数英语一度挂科，但我最终如愿进入竞赛队。
 
 集训时，学长很喜欢讲数论，高数岌岌可危的我，选择将数论交给队友，专攻图论和数据结构。那是一段很充实时光，学习自己喜欢的东西，累并快乐着。
 
