--- a/app/(post)/2014/2014-in-review/page.mdx
+++ b/app/(post)/2014/2014-in-review/page.mdx
@@ -10,7 +10,7 @@ export const metadata = {
   }
 }
 
-<div className="w-screen absolute left-0 bottom-0 top-[200px] mt-5">
+<div className="w-screen absolute left-0 mb-[100%] mt-5">
   <Gallery month={"2014"}/>
 </div>
 
