--- a/app/(post)/2015/2015-in-review/page.mdx
+++ b/app/(post)/2015/2015-in-review/page.mdx
@@ -10,6 +10,6 @@ export const metadata = {
   }
 }
 
-<div className="w-screen absolute left-0 mb-[100%] mt-5">
+<div className="w-full absolute left-0 mb-[100%] mt-5">
   <Gallery month={"2015"}/>
 </div>
