--- a/app/(post)/2016/2016-in-review/page.mdx
+++ b/app/(post)/2016/2016-in-review/page.mdx
@@ -13,6 +13,6 @@ export const metadata = {
 天堂和地狱之间仅隔数天。
 
 
-<div className="w-screen absolute left-0 mb-[100%] mt-5">
+<div className="w-full absolute left-0 mb-[100%] mt-5">
   <Gallery month={"2016"}/>
 </div>
