--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -10,7 +10,7 @@ export const metadata = {
   },
 };
 
-# About
+# Aloha!
 
 <a href="https://twitter.com/zhousongjie" target="_blank">
   <Image
@@ -24,42 +24,30 @@ export const metadata = {
   />
 </a>
 
-## 引言
+很高兴哥们点进来看我的博客。这个本应该是一个自我介绍的页面，但是本人好像并不是一个有很多内容可以介绍的人🤡。
 
-算法竞赛选手，计算机科学本硕，但是一名数学教师。
+这并不是一个写技术的博客（懒狗已经脱离技术太久了，只有一些算法竞赛笔记和深度学习笔记，想看的点[这里](https://tech.jackey.love)）。
 
-“数学好算法就好”，依稀记得竞赛队初面时，佬说过的一句话。我不以为然，后在竞赛生涯中唯一一次 CCPC 省赛中被回旋镖扎中，校一队被数学题打退役。
+点进来的哥们大概率都是认识的人了，朋友圈已经停更了好些日子（其实平时也很少发🤡），偶尔在别人的朋友圈底下突然出现，总是被问为什么「失踪」了。毕业之后大家都各奔东西，但还是有不少想一起吃个饭聊聊天的人，是你们让我知道，还是有很多关心我的朋友，真的很谢谢你们。
 
-## 根源
+有时候好想发点什么，但又不知道该发点什么。心血来潮，决定写一个记录生活的博客，把自己觉得有意义的东西记录下来，同时也做一下 FAQ，回应那些对我抱有期待的人。
 
-从小学、中学阶段，我的数学都不算拔尖。其实我并不擅长数学，我更擅长物理，相比于数学更偏向于现实的科目。我是一个很抗拒理论的人，抗拒理论数学。
+# About
 
-用一个词评价我的中学生涯，是“均衡”，自嘲一点，叫“平庸”。无论是主科的语数英，还是理科的物化生，分数都出奇的一致。全班第一名，但每科又都不是第一名，在单科老师眼里，我并不是他特别关注的学生。
+- 2016 年参加高考，全班第 1 名，全校理科第 21 名，广东省理科第 47815 名。
+- 2016 年被广东财经大学（计算机科学与技术）录取，后通过校内遴选进入实验班。
+- 2017 年暑假集训后加入信息学院 ACM 编程协会，担任技术指导及校赛出题。
+- 2018 年陆续参加「蓝桥杯」、「GDCPC」、「CCPC」等编程竞赛。
+- 2019 年决定考研，一战复旦计算机学院，290/310。
+- 2020 年二战复旦工研院，328/320，进入复试。
 
-相似的分数不是巧合，是我在“取长补短”，花费大量时间“补短”，这种做法是否正确已经不得而知，因为高考早在 N 年前结束了，从结果上来说，似乎还不错。
+# FAQ
 
-## 乌托邦
+**Q: 为什么不发朋友圈了？**  
+**A** 一方面是觉得没有那么多的生活可以分享了，另一方面是确实不想发了。最后一条朋友圈是在复旦复试完成后发的，几天后我就接到了招生办的调剂电话，之后脑子里每天都在重复着复试那个场景，一直在懊悔和自责：如果当时做得更好，结局会不会不一样？——「失败贯穿人生始终，这就是人生」。
 
-人的欲望如同高山滚石，想要走得更远更远，我选择了算法竞赛，将大学课程抛之脑后。过分注重算法，以至于高数英语一度挂科，但我最终如愿进入竞赛队。
+**Q: 最近在干嘛？未来的计划是？**  
+**A:** 一边在准备考公，一边在做教辅老师。
 
-集训时，学长很喜欢讲数论，高数岌岌可危的我，选择将数论交给队友，专攻图论和数据结构。那是一段很充实时光，学习自己喜欢的东西，累并快乐着。
-
-靠着出题人的身份，出各种高难数据结构炫技，成功选进校一队。我一度幻想着在 CCPC 省赛拿下银牌，像各位佬一样，在知乎上吐槽主办方的麦当劳，分享各种二次元队名，把竞赛经历写进博客里，把奖牌递女朋友手里。
-
-## 现实
-
-“我会把你打回现实”，如同 2023 年英雄联盟总决赛四强赛 TheShy 的赛前宣言一样，一场“数学竞赛”把我打回了现实。
-
-18 年的 CCPC 广东省赛，接近半数的数学题，将 ACM 弱校统统打回原形，一题拿铜牌创造省赛历史。回忆起每天晚上看集训队论文，那如影随形的数学证明，工科的尽头是数学，诚不欺我。
-
-那是我第一次参加 CCPC 省赛，也是最后一次，无颜面对教练，队友各奔东西，校一队弃权次年省赛。
-
-## 和解
-
-和数学和解，在决定考研的那一瞬间。
-
-“Rush 912？哪来的勇气考清华？”
-
-“要考就考最难的，按最难的准备。”
-
-“那我简单点，选复旦吧。”
+**Q: 做老师/公务员会觉得可惜吗，有打算回互联网吗？**  
+**A:** 确实是有点不得志的感觉，但是看到发哥（小广财开发者）回湛江当数学老师，好像也有点释怀了。至于回互联网，其实一直都有这个想法，从毕设的问答系统，到考研复旦工研院，我是很想往深度学习这条路走的，但是年龄好像不允许了。
