--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -46,8 +46,5 @@ export const metadata = {
 **Q: 为什么不发朋友圈了？**  
 **A** 一方面是觉得没有那么多的生活可以分享了，另一方面是确实不想发了。最后一条朋友圈是在复旦复试完成后发的，几天后我就接到了招生办的调剂电话，之后脑子里每天都在重复着复试那个场景，一直在懊悔和自责：如果当时做得更好，结局会不会不一样？——「失败贯穿人生始终，这就是人生」。
 
-**Q: 最近在干嘛？未来的计划是？**  
-**A:** 一边在准备考公，一边在做教辅老师。
-
-**Q: 做老师/公务员会觉得可惜吗，有打算回互联网吗？**  
-**A:** 确实是有点不得志的感觉，但是看到发哥（小广财开发者）回湛江当数学老师，好像也有点释怀了。至于回互联网，其实一直都有这个想法，从毕设的问答系统，到考研复旦工研院，我是很想往深度学习这条路走的，但是年龄好像不允许了。
+**Q: 做老师/公务员会觉得可惜吗？有打算回互联网吗？**  
+**A:** 确实是有点不得志的感觉，但是看到发哥（小广财开发者）回老家当数学老师，好像也有点释怀了，互联网卷不动了，下沉当个数学老师还是相对轻松的。至于回互联网，其实一直都有这个想法，从毕设的问答系统，到考研复旦工研院，我是很想往深度学习这条路走的，但是年龄好像不允许了。
