--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -30,7 +30,7 @@ export const metadata = {
 
 点进来的哥们大概率都是认识的人了，朋友圈已经停更了好些日子（其实平时也很少发🤡），偶尔在别人的朋友圈底下突然出现，总是被问为什么「失踪」了。毕业之后大家都各奔东西，但还是有不少想一起吃个饭聊聊天的人，是你们让我知道，还是有很多关心我的朋友，真的很谢谢你们。
 
-有时候好想发点什么，但又不知道该发点什么。心血来潮，决定写一个记录生活的博客，把自己觉得有意义的东西记录下来，同时也做一下 FAQ，回应那些对我抱有期待的人。
+有时候好想发点什么，但又不知道该发点什么。心血来潮，决定写一个记录生活的博客，把自己觉得有意义的东西记录下来。
 
 # About
 
